--- a/unit01/U1.md
+++ b/unit01/U1.md
@@ -1,124 +1,73 @@
-\# Unit 1 – Introduction to Research Methods, the Scientific Investigation, and Ethics in Computing
+# Unit 1 – Introduction to Research Methods, the Scientific Investigation, and Ethics in Computing
 
+## 1. Overview
+This unit established the foundations of research in computing, emphasising **scientific reasoning**, **professional ethics**, and **topic formulation**.  
+As a cybersecurity researcher, I examined how the **scientific method** integrates observation, hypothesis, and experimentation to ensure objectivity and reproducibility (Andersen & Hepburn, 2020).  
+The distinction between **inductive** and **deductive** reasoning deepened my analytical thinking—showing how deduction validates theoretical models, while induction supports adaptive learning from real-world incidents such as threat-intelligence analysis or anomaly detection.
 
-
-\## 1. Overview
-
-This unit established the foundations of research in computing, emphasising \*\*scientific reasoning\*\*, \*\*professional ethics\*\*, and \*\*topic formulation\*\*. As a cybersecurity researcher, I examined how the \*\*scientific method\*\* integrates observation, hypothesis, and experimentation to ensure objectivity and reproducibility (Andersen \& Hepburn, 2020). The distinction between \*\*inductive\*\* and \*\*deductive\*\* reasoning deepened my analytical thinking—showing how deduction validates theoretical models, while induction supports adaptive learning from real-world incidents such as threat-intelligence analysis or anomaly detection.
-
-
-
-Ethics was introduced as a core dimension of credible research, ensuring that both human participation and data handling respect established ethical principles and institutional governance. This understanding framed my subsequent reflection on the ethical responsibilities of computing professionals, particularly when engaging with Artificial Intelligence and sensitive datasets.
-
-
+Ethics was introduced as a core dimension of credible research, ensuring that both human participation and data handling respect established ethical principles and institutional governance.  
+This understanding framed my subsequent reflection on the ethical responsibilities of computing professionals, particularly when engaging with Artificial Intelligence and sensitive datasets.
 
 ---
 
+## 2. Ethics in Computing in the Age of Generative AI
+Through **Reflective Activity 1**, I explored how emerging **generative AI technologies** challenge conventional ethical boundaries.  
+Using insights from the **Menlo Report** (Finn & Shilton, 2023), I evaluated how researchers must uphold *Respect*, *Beneficence*, *Justice*, and *Law and Public Interest* while deploying AI systems.  
+I critically examined how models trained on public data may inadvertently reproduce bias or privacy violations, highlighting the need for transparent data governance frameworks.
 
-
-\## 2. Ethics in Computing in the Age of Generative AI
-
-Through \*\*Reflective Activity 1\*\*, I explored how emerging \*\*generative AI technologies\*\* challenge conventional ethical boundaries. Using insights from the \*\*Menlo Report\*\* (Finn \& Shilton, 2023), I evaluated how researchers must uphold \*Respect\*, \*Beneficence\*, \*Justice\*, and \*Law and Public Interest\* while deploying AI systems. I critically examined how models trained on public data may inadvertently reproduce bias or privacy violations, highlighting the need for transparent data governance frameworks.
-
-
-
-This activity also connected to my professional context at MBZUH, where AI integration in cybersecurity analytics must comply with both UAE data-protection law and institutional ethical review. It reinforced that research ethics and professional integrity are not theoretical concerns—they directly inform responsible practice in digital-infrastructure projects.
-
-
+This activity also connected to my professional context at MBZUH, where AI integration in cybersecurity analytics must comply with both UAE data-protection law and institutional ethical review.  
+It reinforced that research ethics and professional integrity are not theoretical concerns—they directly inform responsible practice in digital-infrastructure projects.
 
 ---
 
-
-
-\## 3. Collaborative Learning Discussion 1 – Reasoning in Research
-
-In the \*\*Collaborative Discussion 1\*\*, I analysed the practical implications of \*\*deductive\*\* and \*\*inductive\*\* reasoning. My initial post contrasted their use within cybersecurity: deduction supports hypothesis testing in risk modelling (e.g. ISO 31000 control verification), while induction aids incident trend analysis and threat-intelligence correlation.  
-
+## 3. Collaborative Learning Discussion 1 – Reasoning in Research
+In the **Collaborative Discussion 1**, I analysed the practical implications of **deductive** and **inductive** reasoning.  
+My initial post contrasted their use within cybersecurity: deduction supports hypothesis testing in risk modelling (e.g. ISO 31000 control verification), while induction aids incident trend analysis and threat-intelligence correlation.  
 Engaging with peers helped me refine the argument that both reasoning forms complement each other in building defensible research conclusions.  
-
-My \*\*summary post\*\* synthesised these views, linking logical reasoning to scientific credibility and reflective practice.
-
-
+My **summary post** synthesised these views, linking logical reasoning to scientific credibility and reflective practice.
 
 ---
 
-
-
-\## 4. Reasoning Quiz
-
-The \*\*Reasoning Quiz\*\* consolidated my conceptual understanding of inference and logical structure. It demonstrated my ability to distinguish reasoning types and apply them to real-world research and security-analysis contexts, reinforcing the connection between analytical precision and ethical judgement.
-
-
+## 4. Reasoning Quiz
+The **Reasoning Quiz** consolidated my conceptual understanding of inference and logical structure.  
+It demonstrated my ability to distinguish reasoning types and apply them to real-world research and security-analysis contexts, reinforcing the connection between analytical precision and ethical judgement.
 
 ---
 
+## 5. Choosing the Topic for Literature Review and Presentation
+After reviewing the official list of topics from the *University of Essex Online (2024) – List of Topics for Literature Review*, I selected **“Cloud security risks in a sector of your choice.”**:contentReference[oaicite:0]{index=0}  
 
-
-\## 5. Choosing the Topic for Literature Review and Presentation
-
-After reviewing the official list of topics from the \*University of Essex Online (2024) – List of Topics for Literature Review\*, I selected \*\*“Cloud security risks in a sector of your choice”\*\*:contentReference\[oaicite:0]{index=0}.  
-
-This topic aligns with my professional focus on securing cloud environments in higher education, allowing me to examine confidentiality, integrity, and compliance risks from both theoretical and practical perspectives. It will also form the foundation for my subsequent literature review and research proposal presentations.
-
-
+This topic aligns with my professional focus on securing cloud environments in higher education, allowing me to examine confidentiality, integrity, and compliance risks from both theoretical and practical perspectives.  
+It will also form the foundation for my subsequent literature review and research proposal presentations.
 
 ---
 
-
-
-\## 6. Evidence
-
-
+## 6. Evidence
 
 | Evidence | Description | File |
-
 |-----------|--------------|------|
-
-| \*\*Reflective Activity 1\*\* | Reflection on ethics in computing and the challenges of generative AI. | `Ethics\_in\_Computing\_GenerativeAI.jpg` |
-
-| \*\*Collaborative Learning Discussion 1\*\* | Initial post, peer reply, and summary analysing deductive vs inductive reasoning. | `Initial\_Post.jpg`, `Peer\_Reply.jpg`, `Summary\_Post.jpg` |
-
-| \*\*Reasoning Quiz\*\* | Demonstrates comprehension of reasoning methods. | `Reasoning\_Quiz.jpg` |
-
-| \*\*Topic Selection\*\* | Chosen topic for literature review and presentation. | \*Cloud security risks in a sector of your choice\* |
-
-
+| **Reflective Activity 1** | Reflection on ethics in computing and the challenges of generative AI. | [unit01/Ethics_in_Computing_GenerativeAI.jpg](Ethics_in_Computing_GenerativeAI.jpg) |
+| **Collaborative Learning Discussion 1** | Initial post, peer reply, and summary analysing deductive vs inductive reasoning. | [unit01/Initial_Post.jpg](Initial_Post.jpg), [unit01/Peer_Reply.jpg](Peer_Reply.jpg), [unit01/Summary_Post.jpg](Summary_Post.jpg) |
+| **Reasoning Quiz** | Demonstrates comprehension of reasoning methods. | [unit01/Reasoning_Quiz.jpg](Reasoning_Quiz.jpg) |
+| **Topic Selection** | Chosen topic for literature review and presentation. | *Cloud security risks in a sector of your choice* |
 
 ---
 
-
-
-\## 7. Reflection
-
-Unit 1 was transformative in developing my \*\*researcher identity\*\*. It bridged my technical cybersecurity background with the structured methodologies of academic research.  
-
-I learned that rigorous reasoning underpins every credible investigation, and that ethics—especially in AI-assisted analysis—is fundamental to public trust. Selecting a focused and ethically grounded topic marked my first step towards independent, evidence-based enquiry that contributes to both scholarly knowledge and professional cybersecurity practice.
-
-
+## 7. Reflection
+Unit 1 was transformative in developing my **researcher identity**.  
+It bridged my technical cybersecurity background with the structured methodologies of academic research.  
+I learned that rigorous reasoning underpins every credible investigation, and that ethics—especially in AI-assisted analysis—is fundamental to public trust.  
+Selecting a focused and ethically grounded topic marked my first step towards independent, evidence-based enquiry that contributes to both scholarly knowledge and professional cybersecurity practice.
 
 ---
 
-
-
-\## 8. References
-
-\- Andersen, H. and Hepburn, B. (2020) \*Scientific Method\*. \*The Stanford Encyclopedia of Philosophy\* (Winter 2020 ed.).  
-
-\- Finn, M. and Shilton, K. (2023) ‘Ethics governance development: The case of the Menlo Report’, \*Social Studies of Science\*, 53(3), pp. 315-340.  
-
-\- Deckard, R. (2023) \*What are Ethics in AI?\* Available at: \[https://www.analyticsinsight.net/ethics-in-ai](https://www.analyticsinsight.net/ethics-in-ai)  
-
-\- QuestionPro (2021) \*What is Research?\* Available at: \[https://www.questionpro.com/blog/what-is-research](https://www.questionpro.com/blog/what-is-research)  
-
-\- University of Essex Online (2024) \*List of Topics for Literature Review\*, p. 2.  
-
-
+## 8. References
+- Andersen, H. and Hepburn, B. (2020) *Scientific Method*. *The Stanford Encyclopedia of Philosophy* (Winter 2020 ed.).  
+- Finn, M. and Shilton, K. (2023) ‘Ethics governance development: The case of the Menlo Report’, *Social Studies of Science*, 53(3), pp. 315–340.  
+- Deckard, R. (2023) *What are Ethics in AI?* Available at: [https://www.analyticsinsight.net/ethics-in-ai](https://www.analyticsinsight.net/ethics-in-ai)  
+- QuestionPro (2021) *What is Research?* Available at: [https://www.questionpro.com/blog/what-is-research](https://www.questionpro.com/blog/what-is-research)  
+- University of Essex Online (2024) *List of Topics for Literature Review*, p. 2.  
 
 ---
 
-
-
-\*End of Unit 1 Evidence\*
-
-
-
+*End of Unit 1 Evidence*
