--- a/unit03/U3.md
+++ b/unit03/U3.md
@@ -1,172 +1,86 @@
-\# Unit 3 – Methodology and Research Methods
+# Unit 3 – Methodology and Research Methods
 
+## 1. Overview
+This unit advanced my understanding of **research methodology** and the philosophical assumptions underpinning scholarly investigation.  
+As Saunders, Lewis and Thornhill (2023) emphasise, methodology extends beyond the mere selection of tools — it represents the theoretical lens through which research is conceived, justified, and interpreted.  
+Researchers must therefore acknowledge the influence of their **ontological** (reality), **epistemological** (knowledge), and **axiological** (values) assumptions across all stages of inquiry.
 
-
-\## 1. Overview
-
-This unit deepened my understanding of \*\*research methodology\*\* and the philosophical assumptions that underpin all academic inquiry.  
-
-As Saunders, Lewis and Thornhill (2023) note, methodology is not merely the selection of tools but the theoretical lens through which research is conceived and interpreted.  
-
-Researchers must therefore recognise the impact of their \*\*ontological\*\* (reality), \*\*epistemological\*\* (knowledge), and \*\*axiological\*\* (values) assumptions on every stage of the research process.  
-
-
-
-For my investigation into \*cloud security risks within higher education\*, this realisation was transformative. It highlighted that methodological choices must align with both the research purpose and the nature of the phenomena being studied—combining rigour, transparency, and contextual awareness.
-
-
+In the context of my study on *cloud security risks within higher education*, this awareness proved transformative. It clarified that methodological decisions must align with the nature of the research problem, ensuring both theoretical rigour and contextual relevance. Methodology, therefore, becomes the bridge between abstract reasoning and practical evidence.
 
 ---
 
+## 2. Research Design
+A coherent **research design** serves as the blueprint for how data are collected, analysed, and interpreted.  
+According to the British Research Methodology (n.d.), research design can be broadly categorised as:
 
+- **Exploratory research** – applied when investigating emerging or underexplored issues to generate new insights.  
+- **Conclusive (descriptive) research** – used to test hypotheses and quantify relationships between variables.
 
-\## 2. Research Design
-
-A coherent \*\*research design\*\* acts as the blueprint for how data will be collected, analysed, and interpreted.  
-
-Following British Research Methodology (n.d.), I distinguished between the two dominant design paradigms:
-
-
-
-\- \*\*Exploratory research\*\* – suitable for examining emerging or underexplored issues and generating new insights.  
-
-\- \*\*Conclusive (descriptive) research\*\* – used to test hypotheses and quantify relationships between variables.  
-
-
-
-Given the evolving and context-specific nature of cloud adoption in universities, my study adopts an \*\*exploratory–descriptive design\*\*.  
-
-This dual structure enables both discovery (identifying emerging risks and governance gaps) and validation (categorising patterns of vulnerabilities and compliance practices).  
-
-Such a design balances the open inquiry typical of exploratory studies with the analytical discipline required in descriptive research.
-
-
+Given the dynamic and context-specific nature of cloud adoption in universities, my investigation follows an **exploratory–descriptive design**.  
+This dual design facilitates discovery — by identifying new forms of cyber risk and governance gaps — while allowing for structured validation through the categorisation of vulnerabilities and compliance patterns. It thus balances open-ended exploration with analytical precision.
 
 ---
 
+## 3. Research Methods and Data Sources
+This unit introduced the three principal methodological paradigms (Sage, 2021):
 
+- **Qualitative methods** – explore perceptions, experiences, and organisational processes, suitable for understanding *why* and *how* phenomena occur.  
+- **Quantitative methods** – focus on measurement, correlation, and statistical inference to reveal *how much* or *to what extent*.  
+- **Mixed-methods research** – combines both paradigms to achieve triangulation and holistic understanding.
 
-\## 3. Research Methods and Data Sources
+For this project, a **mixed-methods approach** is most appropriate. It integrates:  
+- *Qualitative evidence* drawn from expert interviews, institutional policy analysis, and sector case studies to interpret governance culture and decision-making;  
+- *Quantitative evidence* from breach statistics, compliance-audit results, and secondary datasets to measure the scale and frequency of threats.
 
-The unit differentiated between \*\*qualitative\*\*, \*\*quantitative\*\*, and \*\*mixed-methods\*\* research approaches (Sage, 2021):  
-
-
-
-\- \*\*Qualitative methods\*\* explore perceptions, behaviours, and processes. They are inductive and ideal for understanding \*why\* and \*how\* phenomena occur.  
-
-\- \*\*Quantitative methods\*\* measure variables numerically, enabling statistical inference and generalisation.  
-
-\- \*\*Mixed-methods research\*\* integrates both paradigms to achieve methodological triangulation and richer analysis.
-
-
-
-For my research, a \*\*mixed-methods approach\*\* is most appropriate. It combines:  
-
-\- \*Qualitative evidence\* from expert interviews, institutional policies, and case studies to interpret governance and cultural factors.  
-
-\- \*Quantitative evidence\* from incident reports, compliance audits, and published datasets to measure the scale and frequency of security breaches.  
-
-
-
-This methodological synergy supports a pragmatic stance, allowing theoretical depth while ensuring results remain empirically grounded and applicable to real-world institutional practice.
-
-
+Adopting a **pragmatic stance** allows the synthesis of both perspectives, ensuring that outcomes remain empirically grounded while capturing the social and organisational dimensions of cybersecurity practice.
 
 ---
 
+## 4. e-Portfolio Activity: Research Proposal Review
+The **Research Proposal Review** activity provided an opportunity to test the internal coherence of my proposed study.  
+I critically examined how the **research aim**, **questions**, and **methodological framework** align with the philosophical assumptions informing the work.  
+Peer feedback helped refine the rationale for using a mixed-methods design and clarified which techniques best address each research question.  
 
+For example:  
+- *“What are the predominant cloud security risks in higher education institutions?”* will be answered through secondary analysis of breach reports.  
+- *“How do governance frameworks influence risk management?”* will be explored via semi-structured interviews with IT and compliance professionals.  
 
-\## 4. e-Portfolio Activity: Research Proposal Review
-
-The \*\*Research Proposal Review\*\* activity provided a structured opportunity to evaluate the internal coherence of my draft proposal.  
-
-I critically examined the alignment between my \*\*research aim\*\*, \*\*questions\*\*, and \*\*methodological framework\*\*, ensuring consistency between the philosophical foundations and practical procedures.
-
-
-
-Through peer feedback and reflection, I refined my rationale for using a mixed-methods design and clarified how each research question would be addressed through specific data-collection techniques.  
-
-For instance, \*“What are the predominant cloud security risks in higher education institutions?”\* will be informed through secondary analysis of breach reports, while \*“How do governance frameworks influence risk management?”\* will rely on qualitative interviews with IT administrators.  
-
-
-
-This activity underscored the importance of methodological transparency, logical progression, and ethical accountability in research design.
-
-
+This activity reinforced the importance of methodological transparency, logical progression, and ethical accountability in research design.
 
 ---
 
+## 5. Seminar Reflection: Peer Review of Methodologies
+During the Unit 3 seminar, I compared two cybersecurity studies employing distinct methodologies:
 
+1. **Qualitative study** – investigated insider-threat behaviour through semi-structured interviews.  
+   - *Strengths:* generated rich insights into user motivation and organisational culture.  
+   - *Limitations:* limited statistical generalisability.  
 
-\## 5. Seminar Reflection: Peer Review of Methodologies
+2. **Quantitative study** – analysed network telemetry data to identify attack trends.  
+   - *Strengths:* produced replicable, data-driven evidence.  
+   - *Limitations:* overlooked socio-technical influences on system vulnerability.  
 
-During the Unit 3 seminar, I conducted a \*\*peer comparison of two cybersecurity studies\*\* employing contrasting methodologies:
-
-
-
-1\. \*\*Qualitative study\*\* – explored insider-threat behaviour through semi-structured interviews.  
-
-&nbsp;  - \*Strengths:\* offered deep contextual understanding of user motivation and policy gaps.  
-
-&nbsp;  - \*Limitations:\* lacked statistical representativeness.  
-
-
-
-2\. \*\*Quantitative study\*\* – applied network telemetry analysis to identify attack trends.  
-
-&nbsp;  - \*Strengths:\* produced replicable, data-driven insights.  
-
-&nbsp;  - \*Limitations:\* overlooked socio-technical factors influencing security outcomes.  
-
-
-
-Evaluating these papers reinforced the value of \*\*methodological complementarity\*\*—the idea that no single method fully captures the complexity of cybersecurity phenomena.  
-
-This insight directly shaped my decision to integrate qualitative and quantitative elements in my own research to achieve both analytical precision and contextual depth.
-
-
+The comparative review demonstrated the value of **methodological complementarity** — recognising that no single approach captures the complexity of cybersecurity phenomena.  
+Consequently, I confirmed the value of adopting a mixed-methods strategy to achieve both contextual depth and analytical breadth in my research.
 
 ---
 
+## 6. Reflection
+Unit 3 represented a critical transition from defining research questions to constructing a **philosophically coherent and methodologically robust study**.  
+It strengthened my ability to justify methodological choices and enhanced my appreciation for reliability, validity, and ethical integrity.  
 
-
-\## 6. Reflection
-
-Unit 3 marked a pivotal transition from defining research questions to designing a \*\*philosophically coherent and methodologically rigorous study\*\*.  
-
-I now appreciate how methodological alignment enhances reliability, validity, and ethical integrity.  
-
-By situating my work within a \*\*pragmatic paradigm\*\*, I can bridge interpretivist insights (how organisational culture affects security behaviour) with positivist data analysis (quantitative breach statistics).  
-
-
-
-This integrative perspective not only strengthens the credibility of my research but also mirrors the complexity of cybersecurity governance in higher education.  
-
-Overall, this unit solidified my methodological competence and prepared me to operationalise data-collection strategies in forthcoming units.
-
-
+Positioning my research within a **pragmatic paradigm** enables me to integrate interpretivist insights (organisational behaviour, human factors) with positivist analysis (quantitative risk metrics).  
+This integration mirrors the multi-layered reality of cybersecurity governance in higher education, where technical, organisational, and human variables intersect.  
+Overall, this unit consolidated my methodological competence and prepared me to implement data-collection and analysis strategies in the following stages of the MSc programme.
 
 ---
 
-
-
-\## 7. References
-
-\- British Research Methodology (BRM). (n.d.) \*Research Design.\*  
-
-\- Sage. (2021) \*Sage Research Methods: Methods Map.\*  
-
-\- Saunders, M., Lewis, P. and Thornhill, A. (2023) \*Research Methods for Business Students\* (9th edn). Pearson Education.  
-
-\- Boza, T. (2022) \*How to Write a Literature Review: Six Steps to Get You from Start to Finish.\*
-
-
+## 7. References
+- British Research Methodology (BRM). (n.d.) *Research Design.*  
+- Sage. (2021) *Sage Research Methods: Methods Map.*  
+- Saunders, M., Lewis, P. and Thornhill, A. (2023) *Research Methods for Business Students* (9th edn). Pearson Education.  
+- Boza, T. (2022) *How to Write a Literature Review: Six Steps to Get You from Start to Finish.*
 
 ---
 
-
-
-\*End of Unit 3 Evidence\*
-
-
-
+*End of Unit 3 Evidence*
