--- a/unit04/U4.md
+++ b/unit04/U4.md
@@ -1,148 +1,75 @@
-\# Unit 4 – Case Studies, Focus Groups, and Observations
+# Unit 4 – Case Studies, Focus Groups, and Observations
 
+## 1. Overview
+This unit explored key **qualitative data collection methods**—**case studies**, **focus groups**, and **observations**—that underpin interpretive and exploratory research.  
+As Saunders, Lewis and Thornhill (2023) explain, such methods provide the depth required to understand complex social and organisational phenomena that quantitative techniques alone cannot capture.
 
+Each method offers a distinct contribution to research validity and data richness:
+- **Case studies** deliver deep insights into specific organisational contexts and behaviours.  
+- **Focus groups** facilitate collective interpretation and reveal shared perceptions.  
+- **Observations** capture authentic, naturally occurring behaviours in situ.  
 
-\## 1. Overview
-
-This unit explored qualitative data collection methods—\*\*case studies\*\*, \*\*focus groups\*\*, and \*\*observations\*\*—which are fundamental to contextual and interpretive research.  
-
-As Saunders, Lewis, and Thornhill (2023) suggest, these approaches help researchers understand complex human and organisational behaviours that cannot be fully captured through quantitative measures.  
-
-
-
-The unit emphasised how each method contributes to data richness and validity when used appropriately:
-
-\- \*\*Case studies\*\* provide in-depth insights into individual or organisational behaviour.
-
-\- \*\*Focus groups\*\* enable collective interpretation of shared experiences.
-
-\- \*\*Observations\*\* reveal naturally occurring behaviours in context.
-
-
-
-For my MSc project on \*cloud security risks within higher education\*, these qualitative tools helped refine my strategy for examining governance and privacy issues that extend beyond technical vulnerabilities.
-
-
+Within my MSc project on *cloud security risks in higher education*, these methods informed my approach to investigating governance, ethics, and privacy issues that extend beyond purely technical vulnerabilities.
 
 ---
 
+## 2. Literature Review Outline Submission
+During this unit, I formally **submitted the Literature Review Outline** for formative feedback.  
+This submission represented a major milestone, transforming my research topic—*cloud security risks in higher education institutions*—into a structured analytical framework.
 
+The outline synthesised leading literature including NIST (2018), ENISA (2023), and EDUCAUSE (2024), and identified four key thematic domains:
 
-\## 2. Literature Review Outline Submission
+1. Misconfiguration and data exposure risks.  
+2. Insider threats and shared-responsibility challenges.  
+3. Cloud governance and compliance frameworks (GDPR, NESA).  
+4. Mitigation strategies and best practices for academic environments.  
 
-In this unit, I formally \*\*submitted the Literature Review Outline\*\* for formative review.  
-
-This submission marked a critical milestone in translating my research topic—\*cloud security risks in higher education institutions\*—into a structured analytical framework.  
-
-
-
-The outline synthesised key sources, including NIST (2018), ENISA (2023), and EDUCAUSE (2024), and identified four primary thematic areas:
-
-1\. Misconfiguration and data exposure risks.  
-
-2\. Insider threats and shared-responsibility challenges.  
-
-3\. Cloud governance and compliance frameworks (GDPR, NESA).  
-
-4\. Mitigation strategies and best practices for academic environments.
-
-
-
-Feedback from the tutor highlighted the strength of the thematic structure and recommended further clarification of the \*\*data-analysis approach\*\* for integrating both qualitative and quantitative sources.  
-
-This feedback will inform my Unit 7 final literature review submission.
-
-
+Feedback from the tutor confirmed the coherence of the thematic structure and recommended clearer articulation of the **data-analysis approach**, particularly how qualitative and quantitative evidence would be integrated.  
+These recommendations will inform revisions to my final literature review in Unit 7.
 
 ---
 
+## 3. Data Collection Methods in Context
+This unit’s emphasis on **case studies and observation** deepened my appreciation of exploratory research design.  
+In cybersecurity, organisational culture and human behaviour are crucial determinants of data-handling practices and incident response.  
+Adopting a **case-study methodology** therefore provides contextual insight into privacy governance across universities.
 
+I identified the following qualitative instruments for inclusion in my methodology chapter:
+- **Institutional case study:** analysis of privacy policy enforcement and governance at MBZUH and comparable HEIs.  
+- **Expert focus group:** eliciting perspectives from IT and compliance professionals on regulatory and operational challenges.  
+- **Documentary observation:** reviewing anonymised audit logs and governance reports to identify recurring privacy-management gaps.  
 
-\## 3. Data Collection Methods in Context
-
-This unit’s focus on \*\*case studies and qualitative observation\*\* strengthened my understanding of exploratory research design.  
-
-In cybersecurity, organisational culture and human factors significantly influence data-handling practices and incident response. Therefore, adopting \*\*case study analysis\*\* is particularly useful for exploring privacy governance across universities.
-
-
-
-I considered the following qualitative tools for my methodology chapter:
-
-\- \*\*Institutional case study\*\*: analysing privacy policy enforcement at MBZUH and comparable HEIs.  
-
-\- \*\*Expert focus group\*\*: gathering insights from IT administrators on compliance challenges.  
-
-\- \*\*Document observation\*\*: reviewing anonymised audit logs and governance reports to identify data-protection gaps.
-
-
-
-These approaches collectively enhance the validity and interpretive depth of my future empirical study.
-
-
+Together, these approaches enhance credibility through **methodological triangulation**, providing both interpretive depth and organisational realism.
 
 ---
 
+## 4. Seminar Reflection – Case Study on Privacy
+The **Unit 4 seminar** examined a case study on data privacy and governance in digital ecosystems.  
+Discussions centred on balancing institutional accountability with ethical responsibility amid evolving data-protection legislation.  
 
-
-\## 4. Seminar Reflection – Case Study on Privacy
-
-The \*\*Unit 4 seminar\*\* centred on a case study examining privacy and data governance within the digital ecosystem.  
-
-The discussion focused on balancing institutional accountability with ethical responsibility under evolving data-protection regulations.  
-
-
-
-I contributed insights from the UAE higher education sector, particularly how universities navigate \*\*GDPR-aligned compliance\*\* while adhering to \*\*local data-sovereignty requirements\*\*.  
-
-The session reinforced the ethical importance of consent, transparency, and anonymisation in both primary and secondary data collection.  
-
-It also deepened my appreciation for the BCS and ACM codes of conduct, which emphasise that privacy protection is a professional obligation as well as a research requirement.
-
-
+I contributed sector-specific insights from UAE higher education, highlighting how universities reconcile **GDPR-aligned compliance** with **national data-sovereignty mandates**.  
+This exchange underscored the ethical imperatives of informed consent, transparency, and anonymisation in both primary and secondary research.  
+It also reinforced my understanding of the **BCS** and **ACM Codes of Conduct**, which frame privacy protection as both a professional and moral duty for computing practitioners.
 
 ---
 
+## 5. Reflection
+Unit 4 strengthened my ability to justify the selection of **qualitative data-collection tools** appropriate to cybersecurity research.  
+Through the literature-review submission and seminar engagement, I recognised how privacy, governance, and ethics interconnect in real-world digital infrastructures.  
+This synthesis bridges my technical expertise with human-centred research competencies, enriching both analytical depth and ethical integrity.
 
-
-\## 5. Reflection
-
-Unit 4 reinforced my ability to select and justify \*\*qualitative research tools\*\* appropriate to cybersecurity inquiry.  
-
-Through the literature review outline and seminar discussions, I learned how privacy, ethics, and governance interact in real-world digital infrastructures.  
-
-This understanding bridges my technical expertise with human-centred research practice, enhancing both the analytical and ethical dimensions of my study.
-
-
-
-The formative submission and feedback process strengthened my reflective research cycle—moving from design to evaluation and continuous improvement.  
-
-These insights will be crucial when refining my methodology and preparing for data-collection planning in Units 5 and 6.
-
-
+The formative feedback process cultivated a reflective research mindset—one that values iteration, evaluation, and improvement.  
+These skills will be instrumental in refining my methodology and preparing for data-collection planning in Units 5 and 6.
 
 ---
 
-
-
-\## 6. References
-
-\- British Research Methodology (BRM). (n.d.) \*Research Design.\*  
-
-\- ENISA. (2023) \*Threat Landscape Report – Education Sector.\*  
-
-\- EDUCAUSE. (2024) \*Securing the Digital Campus: Cloud Adoption in Higher Education.\*  
-
-\- NIST. (2018) \*Framework for Improving Critical Infrastructure Cybersecurity.\*  
-
-\- Saunders, M., Lewis, P. and Thornhill, A. (2023) \*Research Methods for Business Students\* (9th edn). Pearson Education.  
-
-
+## 6. References
+- British Research Methodology (BRM). (n.d.) *Research Design.*  
+- ENISA. (2023) *Threat Landscape Report – Education Sector.*  
+- EDUCAUSE. (2024) *Securing the Digital Campus: Cloud Adoption in Higher Education.*  
+- NIST. (2018) *Framework for Improving Critical Infrastructure Cybersecurity.*  
+- Saunders, M., Lewis, P. and Thornhill, A. (2023) *Research Methods for Business Students* (9th edn). Pearson Education.  
 
 ---
 
-
-
-\*End of Unit 4 Evidence\*
-
-
-
+*End of Unit 4 Evidence*
